--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.6"
+    "knex": "^0.21.11",
+    "nodemon": "^2.0.6",
+    "pg": "^8.4.2"
   }
 }
