--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "knex": "^0.21.11",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
